--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,11 @@ img{
 
 .home__social-icon{
     font-size: 1.25rem;
-    color: var(--first-color-alt);
+    color: var(--first-color);
+}
+
+.home__social-icon:hover{
+    color:var(--first-color-alt)
 }
 
 .home__blob{
@@ -291,7 +295,7 @@ img{
 }
 
 .home__scroll-button:hover{
-    transform: translateY(0.2rem);
+    transform: translateY(.25rem);
 }
 
 .home__scroll-mouse{
@@ -306,7 +310,7 @@ img{
 }
 
 .home__scroll-arrow{
-    font-size: 1.2rem;
+    font-size: 1.25rem;
 }
 /* BUTTONS */
 .button{
@@ -314,7 +318,8 @@ img{
     background-color: var(--first-color);
     color: #fff;
     padding: 1rem;
-    border-radius: var(--font-medium);
+    border-radius: .5rem;
+    font-weight: var(--font-medium);
 }
 
 .button:hover{
@@ -370,3 +375,210 @@ img{
     display: flex;
     justify-content: center;
 }
+/* Skills */
+.skills__container{
+    row-gap: 0;
+}
+
+.skills__header{
+    display: flex;
+    align-items: center;
+    margin-bottom: var(--mb-2-5);
+    cursor: pointer;
+}
+
+.skills__icon,
+.skills__arrow{
+    font-size: 2rem;
+    color: var(--first-color);
+}
+
+.skills__icon{
+    margin-right: var(--mb-0-75);
+}
+
+.skills__title{
+    font-size: var(--h3-font-size);
+}
+
+.skills__subtitle{
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
+}
+
+.skills__arrow{
+    margin-left: auto;
+    transition: .4s;
+}
+
+.skills__list{
+    row-gap: 1.5rem;
+    padding-left: 2.75rem;
+}
+.skills__titles{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--mb-0-5);
+}
+
+.skills__name{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+.skills__bar,
+.skills__percentage{
+    height: 5px;
+    border: .25rem;
+}
+
+.skills__bar{
+    background-color: var(--first-color-lighter);
+}
+
+.skills__percentage{
+    display: block;
+    background-color: var(--first-color);
+}
+
+.skills__html{
+    width: 90%;
+}
+
+.skills__css{
+    width: 90%;
+}
+
+.skills__js{
+    width: 80%;
+}
+
+.skills__react{
+    width: 75%;
+}
+
+.skills__java{
+    width: 90%;
+}
+
+.skills__python{
+    width: 95%;
+}
+
+.skills__cs{
+    width: 85%;
+}
+
+.skills__c{
+    width: 60%;
+}
+
+.skills__adobe{
+    width: 90%;
+}
+
+.skills__git{
+    width: 85%;
+}
+
+.skills__cisco{
+    width: 80%;
+}
+
+.skills__linux{
+    width: 50%;
+}
+
+.skills__close .skills__list{
+    height: 0;
+    overflow: hidden;
+}
+
+.skills__open .skills__list{
+    height: max-content;
+    margin-bottom: var(--mb-2-5);
+}
+
+.skills__open .skills__arrow{
+    transform: rotate(-180deg);
+}
+/* Qualification */
+.qualification__tabs{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2);
+}
+
+.qualification__button{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    cursor: pointer;
+}
+
+.qualification__button:hover{
+    color:var(--first-color)
+}
+
+.qualification__icon{
+    font-size: 1.8rem;
+    margin-right: var(--mb-0-25);
+}
+
+.qualification__data{
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+}
+
+.qualification__title{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+.qualification__subtitle{
+    display: inline-block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-1);
+}
+
+.qualification__calender{
+    font-size: var(--smaller-font-size);
+    color: var(--text-color-light);
+}
+
+.qualification__rounder{
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color: var(--first-color);
+    border-radius: 50%;
+}
+
+.qualification__line{
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: var(--first-color);
+    transform: translate(6px, -7px);
+}
+
+.qualification [data-content]{
+    display: none;
+}
+
+.qualification__active[data-content]{
+    display: block;
+}
+
+.qualification__button.qualification__active{
+    color: var(--first-color);
+}
+/* Services */
+
+/* active ModaL*/
+
+/* Portolio */
+
+/* Project in mind */
+
+/* Testimonial */
