fixed a few bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,7 @@ img{
 
 .home__blob-img{
     width: 200px;
+    height: 200px;
 }
 
 .home__data{
@@ -989,6 +990,13 @@ img{
     }
     .home__data{
         grid-column: initial;
+    }
+
+    .home__img,
+    .home__blob-img,
+    .home__blob{
+        order: 1;
+        justify-content: center;
     }
     
 
